@@ -1,3 +1,8 @@
+2000-08-23  Bruno Haible  <haible@clisp.cons.org>
+
+	* c-bs-a.m4: New file, from sh-utils-2.0j.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2000-07-29  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.am (EXTRA_DIST): Add codeset.m4, iconv.m4.
