@@ -1,3 +1,7 @@
+2000-08-23  Bruno Haible  <haible@clisp.cons.org>
+
+	* configure.in: Invoke AC_C_BACKSLASH_A.
+
 2000-07-29  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.am (EXTRA_DIST): Add aclocal.sh.
